--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@azure/msal-node": "^2.6.3",
-    "exceljs": "^4.4.0"
+    "exceljs": "^4.4.0",
+    "luxon": "^3.4.4"
   }
 }
