--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
     "@azure/msal-node": "^2.6.3",
     "exceljs": "^4.4.0",
     "luxon": "^3.4.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
